@@ -16,7 +16,7 @@
 #These are the versions of our dependencies (in alphabetical order)
 ant-task.version=2.0.10
 
-avro.version=1.3.2
+avro.version=1.5.3
 
 checkstyle.version=4.2
 
@@ -63,6 +63,8 @@ lucene-core.version=2.3.1
 mina-core.version=2.0.0-M5
 
 oro.version=2.0.8
+
+paranamer.version=2.3
 
 rats-lib.version=0.6
 
